# Rutler

./: .gitignore  README.markdown  face_detect.py  get_ldap.py  people_to_room.json  pretty_people_to_room.json  serial_pwm.py
arduino/rosserial_servo/: Makefile  rosserial_servo.pde
nodes/: looking.py  node_controller.py
ros_workspace/: setup  setup.sh
ros_workspace/beginner_tutorials/: CMakeLists.txt  manifest.xml
ros_workspace/beginner_tutorials/nodes/: add_two_ints_client.py  listener.py  talker.py
ros_workspace/espeak_node/: mainpage.dox  manifest.xml
ros_workspace/espeak_node/nodes/: espeak_controller.py
ros_workspace/espeak_node/scripts/: talker.py
ros_workspace/gepp_kinect/: CMakeLists.txt  mainpage.dox  manifest.xml
ros_workspace/gepp_kinect/src/: SceneDrawer.cpp  SceneDrawer.h  main.cpp
ros_workspace/kinect/: CMakeLists.txt  manifest.xml
ros_workspace/kinect/launch/: vision.launch
ros_workspace/kinect/msg/: Polar.msg  User.msg
ros_workspace/kinect/nodes/: controller.py
ros_workspace/kinect/src/: SceneDrawer.cpp  SceneDrawer.h  main.cpp  opengles.cpp  process_users.cpp  process_users.h  user_tracker.cpp
ros_workspace/kinect_msgs/: mainpage.dox  manifest.xml
ros_workspace/kinect_msgs/msg/: User.msg  Users.msg
ros_workspace/node_node/: Makefile  mainpage.dox  manifest.xml
ros_workspace/node_node/nodes/: looking.py  node_controller.py  watcher.py
ros_workspace/pi_speech_tutorial/: manifest.xml
ros_workspace/pi_speech_tutorial/config/: names  names.txt  nav_commands.dic  nav_commands.lm  nav_commands.log_pronounce  nav_commands.sent  nav_commands.txt  nav_commands.vocab  numbers1.txt  numbers2.txt
ros_workspace/pi_speech_tutorial/launch/: talkback.launch  turtlebot_voice_nav.launch  (+1 more)
ros_workspace/robot_setup_tf/: CMakeLists.txt  mainpage.dox  manifest.xml
ros_workspace/rutler_2dnav/: costmap_common_params.yaml  mainpage.dox  manifest.xml  mapping.launch  move_base.launch  rutler_configuration.launch  super_duper.vcg
ros_workspace/simple_navigation_goals/: CMakeLists.txt  manifest.xml
ros_workspace/speech_maps/: maps.py
ros_workspace/speech_recognition/: mainpage.dox  manifest.xml
(+51 files in other folders)
